--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
-media_folder: "dist/assets/image"
-public_folder: "/assets/image"
+  publish_mode: editorial_workflow
+  media_folder: "dist/assets/image"
+  public_folder: "/assets/image"
 
 
 collections:
