--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,6 +3,8 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
 
 publish_mode: editorial_workflow
+show_preview_links: false
+
 
 media_folder: "dist/assets/image"
 public_folder: "/assets/image"
@@ -19,3 +21,29 @@ collections:
       - {label: "Tags", name: "tags", widget: "list", default: "pages"}
       - {label: "Image", name: "img", widget: "image"}
       - {label: "Article", name: "body", widget: "markdown"}
+
+
+
+
+  - name: "imageLink" 
+    label: "Image Link" 
+    folder: "src/imageLink"
+    create: true
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+
+
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Tags", name: "tags", widget: "list", default: "nature"}
+      - {label: "Image 1", name: "img1", widget: "image", required: false}
+      - {label: "Image 2", name: "img2", widget: "image", required: false}
+      - {label: "Image 3", name: "img3", widget: "image", required: false}
+      - {label: "Image 4", name: "img4", widget: "image", required: false}
+      - {label: "Image 5", name: "img5", widget: "image", required: false}
+      - {label: "Image 6", name: "img6", widget: "image", required: false}
+      - {label: "Image 7", name: "img7", widget: "image", required: false}
+      - {label: "Image 8", name: "img8", widget: "image", required: false} - {label: "Image", name: "img9", widget: "image", required: false}
+      - {label: "Image 9", name: "img8", widget: "image", required: false} 
+      - {label: "Image 10", name: "img10", widget: "image", required: false}
+     
+
