--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,9 +1,9 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: master 
 
-publish_mode: editorial_workflow
-show_preview_links: false
+  
+# publish_mode: editorial_workflow
 
 
 media_folder: "dist/assets/image"
